--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,15 +91,14 @@ jobs:
         asset_name: cp-enterprise-control-center-7.7.1.tar.gz
         asset_content_type: application/gzip
 
-    - name: Upload cp-schema-registry artifact
-      uses: actions/upload-release-asset@v1
+    - name: Upload cp-schema-registry artifacts
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: cp-schema-registry-7.7.1.tar.gz
-        asset_name: cp-schema-registry-7.7.1.tar.gz
-        asset_content_type: application/gzip
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        for file in $SPLIT_FILES
+        do
+          gh release upload ${{ github.run_number }} $file
+        done
 
     - name: Add Instructions to Release Notes
       env:
